<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fiducial_slam_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 node to build a 3D map of fiducials and estimate robot pose from fiducial transforms</description>

  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <author email="jimv@mrjim.com">Jim Vaughan</author>
  
  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>fiducial_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- We'll add more dependencies as needed -->
  
  <!-- ROS2 Service Generators -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
